swagger WIP, memory model WIP