@@ -21,8 +21,8 @@
         <mapstruct.version>1.6.3</mapstruct.version>
         <problem-spring-web.version>0.29.1</problem-spring-web.version>
         <spring-ai.version>1.0.0-M8</spring-ai.version>
-        <springdoc.version>2.8.5</springdoc.version>
-        <openapi-plugin.version>1.5</openapi-plugin.version>
+        <springdoc.version>2.4.0</springdoc.version>
+        <openapi-plugin.version>1.4</openapi-plugin.version>
     </properties>
 
     <dependencies>
@@ -45,6 +45,11 @@
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>${springdoc.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
         </dependency>
 
         <dependency>
@@ -144,6 +149,65 @@
                 </dependency>
             </dependencies>
         </profile>
+
+        <profile>
+            <id>generate-api</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                        <configuration>
+                            <excludes>
+                                <exclude>
+                                    <groupId>org.projectlombok</groupId>
+                                    <artifactId>lombok</artifactId>
+                                </exclude>
+                            </excludes>
+                            <jvmArguments>
+                                -Dspringdoc.is-snake=true
+                                -Dspring.application.admin.enabled=true -Dspring.profiles.active=generate-api
+                                -Dspringdoc.default-produces-media-type=application/json
+                                -Dspringdoc.default-consumes-media-type=application/json
+                                --enable-preview
+                            </jvmArguments>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>start</goal>
+                                    <goal>stop</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.springdoc</groupId>
+                        <artifactId>springdoc-openapi-maven-plugin</artifactId>
+                        <version>${openapi-plugin.version}</version> <!-- or latest -->
+                        <executions>
+                            <execution>
+                                <id>integration-test</id>
+                                <goals>
+                                    <goal>generate</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+
+                        <configuration>
+                            <apiDocsUrl>http://localhost:8080/swagger/api-doc/swagger.yaml</apiDocsUrl>
+                            <outputFileName>swagger.yaml</outputFileName>
+                            <outputDir>${project.basedir}</outputDir>
+                            <skip>false</skip>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 
     <build>
@@ -197,23 +261,6 @@
                 <version>${liquibase.version}</version>
                 <configuration>
                     <propertyFile>src/main/resources/liquibase.properties</propertyFile>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.springdoc</groupId>
-                <artifactId>springdoc-openapi-maven-plugin</artifactId>
-                <version>${openapi-plugin.version}</version> <!-- or latest -->
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                    </execution>
-                </executions>
-
-                <configuration>
-                    <outputFileName>swagger.yaml</outputFileName>
                 </configuration>
             </plugin>
         </plugins>
